# cardinality-estimator-safe

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: analyze.py  cardinality_estimator.rs
examples/: estimator.rs  json.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: estimator.rs  serde.rs  serde_json_array.rs  serde_json_value.rs  serde_postcard.rs  serde_roundtrip.rs
src/: array.rs  element.rs  estimator.rs  hyperloglog.rs  lib.rs  representation.rs  serde.rs  sketch.rs  small.rs
