[package]
name = "cardinality-estimator-safe"
version = "2.1.0"
edition = "2021"
authors = ["Alex Bocharov <bocharov.alexandr@gmail.com>", "phil"]
description = "Estimate the cardinality of distinct elements in a stream or dataset with no unsafe code"
documentation = "https://docs.rs/cardinality-estimator-safe"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uniphil/cardinality-estimator-safe"
keywords = ["cardinality", "distinct-count", "hyperloglog", "probabilistic", "sketch"]
categories = ["algorithms", "data-structures"]

[dependencies]
enum_dispatch = "0.3.13"
serde = { version = "1.0", features = ["derive"], optional = true }
wyhash = "0.5.0"

[dev-dependencies]
amadeus-streaming = "0.4.3"
cardinality-estimator = "1.0.2"
criterion = { version = "0.5.0", features = ["html_reports"] }
dhat = "0.3.3"
hyperloglog = "1.0.2"
hyperloglogplus = "0.4.1"
postcard = { version = "1.1.1", features=["alloc"] }
pprof = { version = "0.14.0", features = ["flamegraph", "criterion", "protobuf-codec"] }
probabilistic-collections = "0.7.0"
rand = "0.8.5"
serde_json = "1.0"
tabled = "0.15.0"
test-case = "3.3.1"

[[bench]]
name = "cardinality_estimator"
harness = false

[features]
default = []
with_serde = ["serde"]

[profile.release]
debug = 1

[lints.clippy]
cast_lossless = "deny"
